added algolia logo

--- a/apps/toolsy/src/app/pages/home/home.component.html
+++ b/apps/toolsy/src/app/pages/home/home.component.html
@@ -9,13 +9,7 @@
   </div>
   <div class="flex flex-auto justify-center">
     <div class="relative w-full font">
-      <input
-        #search
-        placeholder="Search for a tool or service"
-        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-        (keyup.enter)="goToSearch(search.value)"
-      />
-      <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
+      <div class="absolute left-0 bottom-0 top-0 flex items-center ml-3">
         <svg
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
@@ -28,6 +22,30 @@
             d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
             class="heroicon-ui"
           ></path>
+        </svg>
+      </div>
+      <input
+        #search
+        placeholder="Search for a tool or service"
+        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-2 pl-11 pr-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+        (keyup.enter)="goToSearch(search.value)"
+      />
+      <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M3.14695 0H20.7543C22.487 0 23.9013 1.41327 23.9013 3.16002V20.8405C23.9013 22.5809 22.4938 24 20.7543 24H3.14695C1.41424 24 0 22.5877 0 20.8409V3.15179C0 1.41327 1.40601 0 3.14695 0Z"
+            fill="#5468FF"
+          />
+          <path
+            d="M14.441 5.35777V4.53498C14.441 3.9595 13.9764 3.49341 13.4033 3.4939H10.9843C10.7088 3.49441 10.4447 3.6043 10.2501 3.79942C10.0555 3.99454 9.94638 4.25893 9.94664 4.53449V5.37955C9.94664 5.47393 10.0338 5.53927 10.1281 5.51749C10.8123 5.31922 11.5212 5.21901 12.2335 5.21983C12.9237 5.21983 13.6066 5.31373 14.2668 5.49571C14.2876 5.50089 14.3094 5.50123 14.3303 5.4967C14.3513 5.49216 14.371 5.48288 14.3878 5.46955C14.4046 5.45623 14.4182 5.43923 14.4274 5.41985C14.4366 5.40047 14.4413 5.37923 14.441 5.35777V5.35777ZM7.81172 6.43467L7.39839 6.01988C7.30224 5.92333 7.18797 5.84671 7.06214 5.79443C6.93631 5.74216 6.80139 5.71524 6.66513 5.71524C6.52887 5.71524 6.39395 5.74216 6.26812 5.79443C6.14229 5.84671 6.02802 5.92333 5.93187 6.01988L5.43771 6.51453C5.34095 6.61105 5.26418 6.72572 5.2118 6.85196C5.15942 6.9782 5.13246 7.11353 5.13246 7.2502C5.13246 7.38688 5.15942 7.52221 5.2118 7.64845C5.26418 7.77469 5.34095 7.88935 5.43771 7.98588L5.84427 8.39389C5.90961 8.45875 6.00399 8.44374 6.06207 8.37889C6.30158 8.04835 6.56613 7.7367 6.85341 7.44671C7.14316 7.15484 7.45639 6.88726 7.78994 6.64666C7.86254 6.6031 7.86932 6.50049 7.81172 6.43467V6.43467ZM12.2258 9.04777V12.6076C12.2258 12.7092 12.3356 12.7828 12.4291 12.7315L15.5813 11.0936C15.653 11.0578 15.6747 10.9697 15.6394 10.8976C15.3099 10.3147 14.8365 9.82593 14.2644 9.47794C13.6923 9.12996 13.0406 8.93437 12.3715 8.90983C12.2989 8.90983 12.2263 8.96791 12.2263 9.04777H12.2258ZM12.2263 17.6237C9.59816 17.6237 7.46276 15.4825 7.46276 12.8476C7.46276 10.2128 9.59816 8.07252 12.2263 8.07252C14.8553 8.07252 16.9898 10.2128 16.9898 12.8476C16.9898 15.4825 14.8626 17.6237 12.2263 17.6237ZM12.2263 6.06393C8.49367 6.06393 5.46627 9.09956 5.46627 12.8476C5.46627 16.5967 8.49367 19.6255 12.2263 19.6255C15.9589 19.6255 18.9863 16.5894 18.9863 12.8409C18.9863 9.09182 15.9661 6.06393 12.2263 6.06393"
+            fill="white"
+          />
         </svg>
       </div>
     </div>
